<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bus"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:circularflow_radiusInDP="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/train_Schedules"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/bg"
        android:layout_width="0dp"
        android:layout_height="343dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/rounded_search"
        app:circularflow_defaultRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/fromLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="30dp"
        android:text="@string/from"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bg" />

    <Spinner
        android:id="@+id/busTypeSpinner"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/spinner_outline"
        android:dropDownSelector="@drawable/ic_arrow"
        android:entries="@array/train_city"
        android:padding="10dp"
        android:spinnerMode="dropdown"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:visibility="visible"
        app:circularflow_defaultRadius="20dp"
        app:circularflow_radiusInDP="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fromLabel"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.8" />

    <ImageButton
        android:id="@+id/swapButton"
        android:layout_width="67dp"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:background="@color/white"
        android:contentDescription="Swap locations"
        android:src="@drawable/ic_swap"
        app:circularflow_defaultRadius="20dp"
        app:circularflow_radiusInDP="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/busTypeSpinner" />

    <TextView
        android:id="@+id/toLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="30dp"
        android:text="@string/to"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swapButton" />

    <Spinner
        android:id="@+id/to"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:dropDownSelector="@drawable/ic_arrow"
        android:background="@drawable/spinner_outline"
        android:entries="@array/train_city"
        android:padding="10dp"
        android:spinnerMode="dropdown"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:circularflow_defaultRadius="20dp"
        app:circularflow_radiusInDP="20dp"
        app:layout_constraintCircleRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toLabel" />

    <Button
        android:id="@+id/button2"
        android:layout_width="340dp"
        android:layout_height="52dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="150dp"
        android:text="Search"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>