<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bus"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:circularflow_radiusInDP="20dp"
    tools:context=".MainActivity">

    <View
        android:id="@+id/view8"
        android:layout_width="324dp"
        android:layout_height="90dp"
        android:layout_marginTop="90dp"
        android:background="@drawable/rounded_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/from"
        app:layout_constraintEnd_toStartOf="@+id/textView15"
        app:layout_constraintStart_toEndOf="@+id/imageView9"
        app:layout_constraintTop_toTopOf="@+id/view8" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/to"
        app:layout_constraintBottom_toBottomOf="@+id/view8"
        app:layout_constraintEnd_toStartOf="@+id/textView16"
        app:layout_constraintStart_toEndOf="@+id/imageView9" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:text="Panadura"
        app:layout_constraintEnd_toStartOf="@+id/textView17"
        app:layout_constraintTop_toTopOf="@+id/view8" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="20dp"
        android:text="Dehiwala"
        app:layout_constraintBottom_toBottomOf="@+id/view8"
        app:layout_constraintEnd_toStartOf="@+id/textView18" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:text="10:30"
        app:layout_constraintEnd_toEndOf="@+id/view8"
        app:layout_constraintTop_toTopOf="@+id/view8" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:text="13:45"
        app:layout_constraintBottom_toBottomOf="@+id/view8"
        app:layout_constraintEnd_toEndOf="@+id/view8" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="41dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/view8"
        app:layout_constraintStart_toStartOf="@+id/view8"
        app:layout_constraintTop_toTopOf="@+id/view8"
        app:srcCompat="@drawable/ic_train" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/history"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <View
        android:id="@+id/view7"
        android:layout_width="324dp"
        android:layout_height="90dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view8" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/from"
        app:layout_constraintEnd_toStartOf="@+id/textView9"
        app:layout_constraintStart_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toTopOf="@+id/view7" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/to"
        app:layout_constraintBottom_toBottomOf="@+id/view7"
        app:layout_constraintEnd_toStartOf="@+id/textView10"
        app:layout_constraintStart_toEndOf="@+id/imageView8" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:text="Kaduwela"
        app:layout_constraintEnd_toStartOf="@+id/textView11"
        app:layout_constraintTop_toTopOf="@+id/view7" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="20dp"
        android:text="Kollupitiya"
        app:layout_constraintBottom_toBottomOf="@+id/view7"
        app:layout_constraintEnd_toStartOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:text="10:30"
        app:layout_constraintEnd_toEndOf="@+id/view7"
        app:layout_constraintTop_toTopOf="@+id/view7" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:text="13:45"
        app:layout_constraintBottom_toBottomOf="@+id/view7"
        app:layout_constraintEnd_toEndOf="@+id/view7" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="41dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/view7"
        app:layout_constraintStart_toStartOf="@+id/view7"
        app:layout_constraintTop_toTopOf="@+id/view7"
        app:srcCompat="@drawable/ic_bus" />




</androidx.constraintlayout.widget.ConstraintLayout>